--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,6 @@ channels:
 dependencies:
   - python=3.11
   - pip
-  - psycopg2-binary
   - fastapi
   - uvicorn
   - pydantic
@@ -14,8 +13,24 @@ dependencies:
   - sqlalchemy
   - nodejs
   - pip:
-      - openai>=1.86.0,<2.1.0
-      - chromadb
-      - langchain
-      - python-dotenv
-      - tiktoken
+      - openai==1.3.7
+      - chromadb==0.4.18
+      - langchain==0.3.27
+      - python-dotenv==1.0.0
+      - tiktoken==0.5.1
+      - psycopg2-binary==2.9.10
+      - alembic==1.13.0
+      - pgvector==0.4.1
+      - google-auth==2.23.4
+      - google-auth-oauthlib==1.1.0
+      - google-auth-httplib2==0.2.0
+      - google-api-python-client==2.108.0
+      - hubspot-api-client==7.0.0
+      - PyPDF2==3.0.1
+      - python-docx==1.1.0
+      - pypdf==6.0.0
+      - pytest==7.4.3
+      - pytest-asyncio==0.21.1
+      - black==23.11.0
+      - flake8==6.1.0
+      - pydantic-core>=2.18.0,<3.0.0
