--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
     "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "vite": "^5.0.0",
     "vitest": "^0.34.6"
   },
