--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,14 +23,16 @@ google-api-python-client==2.108.0
 hubspot-api-client==7.0.0
 
 # OpenAI integration
-openai==1.3.7
+openai==1.1.0
 
 # Langchain 
 langchain==0.3.27
 
-# Vector database 
-chromadb==0.4.18
+# Vector database with pgvector
+pgvector==0.4.1
 tiktoken==0.5.1
+numpy==1.26.4
+
 
 # Document processing 
 PyPDF2==3.0.1
@@ -38,7 +40,7 @@ python-docx==1.1.0
 pypdf==6.0.0  # Alternative to PyPDF2, not needed
 
 # HTTP client (required for RAG)
-httpx==0.25.2
+httpx==0.27.2
 requests==2.31.0
 
 # Development (optional)
