--- a/environment.yml
+++ b/environment.yml
@@ -9,13 +9,14 @@ dependencies:
   - uvicorn
   - pydantic
   - requests
-  - httpx
+  - httpx>=0.24.0
   - sqlalchemy
   - nodejs
   - pip:
       - openai==1.3.7
-      - chromadb==0.4.18
+      - pgvector==0.4.1
       - langchain==0.3.27
+      - numpy==1.26.4
       - python-dotenv==1.0.0
       - tiktoken==0.5.1
       - psycopg2-binary==2.9.10
