--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,19 @@
 # Core FastAPI dependencies
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi>=0.115.0
+uvicorn>=0.30.0
 python-dotenv==1.0.0
 pydantic>=2.7.4,<3.0.0
 pydantic-core>=2.18.0,<3.0.0
-
-
+anyio>=4.8.0
 
 # Database
-sqlalchemy==2.0.23
+sqlalchemy>=2.0.34
 alembic==1.13.0
 psycopg2-binary==2.9.10
-pgvector==0.4.1
 
 # Auth
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
+google-auth>=2.27.0
+google-auth-oauthlib>=1.2.0
 google-auth-httplib2==0.2.0
 google-api-python-client==2.108.0
 
@@ -23,16 +21,15 @@ google-api-python-client==2.108.0
 hubspot-api-client==7.0.0
 
 # OpenAI integration
-openai==1.1.0
+openai>=1.50.0
 
 # Langchain 
-langchain==0.3.27
+langchain>=0.3.27
 
 # Vector database with pgvector
 pgvector==0.4.1
-tiktoken==0.5.1
-numpy==1.26.4
-
+tiktoken>=0.7.0
+numpy>=2.1.2
 
 # Document processing 
 PyPDF2==3.0.1
@@ -40,11 +37,11 @@ python-docx==1.1.0
 pypdf==6.0.0  # Alternative to PyPDF2, not needed
 
 # HTTP client (required for RAG)
-httpx==0.27.2
+httpx>=0.28.1
 requests==2.31.0
 
 # Development (optional)
-pytest==7.4.3
-pytest-asyncio==0.21.1
+pytest>=8.3.3
+pytest-asyncio>=0.24.0
 black==23.11.0
 flake8==6.1.0
