Update project files: add new API endpoints, frontend components, and modify existing services

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ HUBSPOT_DEVELOPER_API_KEY=your_hubspot_developer_api_key_here
 HUBSPOT_CLIENT_ID=your_hubspot_client_id_here
 HUBSPOT_CLIENT_SECRET=your_hubspot_client_secret_here
 HUBSPOT_REDIRECT_URI=http://yourdomain.com/oauth/callback
+HUBSPOT_ACCESS_TOKEN=your_hubspot_access_token_here
 
 # Google Client Secrets
 GOOGLE_CLIENT_ID=your_google_client_id_here
@@ -22,6 +23,10 @@ SUPABASE_URL=your_supabase_url_here
 SUPABASE_ANON_KEY=your_supabase_anon_key_here
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 SUPABASE_PUBPLISHABLE_KEY=your_supabase_publishable_key_here
+
+# Database
+DATABASE_URL=your_database_url_here
+SECRET_KEY=your_secret_key_here
 
 # Knowledge Base Path
 KNOWLEDGE_BASE_PATH=./metalogics_kb
