chore(env): document env vars and ignore token files

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,20 @@ SUPABASE_ANON_KEY=your-supabase-anon-key
 PORT=5000
 SUPABASE_URL=your-supabase-url
 SUPABASE_ANON_KEY=your-supabase-anon-key
+
+# Backend
+DATABASE_URL=postgresql://postgres:postgres@db:5432/chatbot
+SECRET_KEY=<generate_a_secure_random_string>
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+# Google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://localhost:8000/api/calendar/callback
+GOOGLE_TOKEN_ENCRYPTION_KEY_BASE64=<base64_32_byte_key>
+# Postgres Vector
+POSTGRES_DB=chatbot
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+PGVECTOR_ENABLED=true
