--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ HUBSPOT_ACCESS_TOKEN=your_hubspot_access_token_here
 # Google Client Secrets
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
-GOOGLE_REDIRECT_URI=http://localhost:3000/google/callback
+GOOGLE_REDIRECT_URI=http://localhost:8000/api/calendar/callback
 
 # OpenAI Secrets
 OPENAI_API_KEY=your_openai_api_key_here
