--- a/environment.yml
+++ b/environment.yml
@@ -5,33 +5,33 @@ channels:
 dependencies:
   - python=3.11
   - pip
-  - fastapi
-  - uvicorn
-  - pydantic
-  - requests
-  - httpx>=0.24.0
-  - sqlalchemy
   - nodejs
   - pip:
-      - openai==1.3.7
-      - pgvector==0.4.1
-      - langchain==0.3.27
-      - numpy==1.26.4
+      - fastapi>=0.115.0
+      - uvicorn>=0.30.0
       - python-dotenv==1.0.0
-      - tiktoken==0.5.1
-      - psycopg2-binary==2.9.10
+      - pydantic>=2.7.4,<3.0.0
+      - pydantic-core>=2.18.0,<3.0.0
+      - anyio>=4.8.0
+      - sqlalchemy>=2.0.34
       - alembic==1.13.0
-      - pgvector==0.4.1
-      - google-auth==2.23.4
-      - google-auth-oauthlib==1.1.0
+      - psycopg2-binary==2.9.10
+      - google-auth>=2.27.0
+      - google-auth-oauthlib>=1.2.0
       - google-auth-httplib2==0.2.0
       - google-api-python-client==2.108.0
       - hubspot-api-client==7.0.0
+      - openai>=1.50.0
+      - langchain>=0.3.27
+      - pgvector==0.4.1
+      - tiktoken>=0.7.0
+      - numpy>=2.1.2
       - PyPDF2==3.0.1
       - python-docx==1.1.0
       - pypdf==6.0.0
-      - pytest==7.4.3
-      - pytest-asyncio==0.21.1
+      - httpx>=0.28.1
+      - requests==2.31.0
+      - pytest>=8.3.3
+      - pytest-asyncio>=0.24.0
       - black==23.11.0
       - flake8==6.1.0
-      - pydantic-core>=2.18.0,<3.0.0
